2014-12-28 John Wu <John dot Wu at ACM dot org>
	* tests/acmpub.v.a, tests/acmpub.v.b: modify the test dictionary
	to exercise the new feature in dictionary class
	* src/bord.cpp: update the use of dictionaries to allow 0 as a
	regular code word

2014-12-27 John Wu <John dot Wu at ACM dot org>
	* src/ikeywords.cpp: update functions to reflect the change in
	dictionary

2014-12-26 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.h, src/dictionary.cpp: modify the dictionary code
	to allow users to pass in an arbitrary combination of integers and
	strings, chnage the integer code for null values from 0 to -1
	(0xFFFFFFFFU in 32-bit unsigned integer format)

2014-12-16 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp: change do_cnt() to use local variable to
	count the number of set bits so as to avoid the thread-safety
	issue, define FASTBIT_LAZY_INIT to be 1 (i.e., go back to lazy
	initialization in bitvectors, reversing the change makde on
	2014/08/06)

2014-12-15 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp: in do_cnt() add code blocks to reduce the
	future cost of counting a bitvector of all 0s
	* src/query.cpp: in doEvaluate remove the test on ht.cnt() to
	avoid a problem reported by Steven Enns

2014-12-14 John Wu <John dot Wu at ACM dot org>
	* configure.ac: add test for presence of strptime
	* src/whereParser.yy: add conditional macro HAVE_STRPTIME to check
	for the presence of strptime before using it.  If strptime is not
	available, TO_UNIXTIME_LOCAL and TO_UNIXTIME_GMT will cause
	exceptions

2014-12-11 John Wu <John dot Wu at ACM dot org>
	* INSTALL: update to reflect the recent failed tests with intel,
	PGI and pathscale compilers on hopper.nersc.gov.  These compilers
	do not have support for either unique_ptr or unordered_map.

2014-12-07 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp:5641,5703 remove the check of noffsets > nkeys,
	to allow binned index with a single bitmap to be accepted (to